css/html javítás

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h2>Fajtái</h2>
             Öt faját, de sok változattal termesztik <br> szerte a világon
         <ul>
-        <li><a href="/képek/sok.jpg">Közönséges paprika</a></li>
+        <li><a href="./képek/sok.jpg">Közönséges paprika</a></li>
         <li><a href="https://hu.wikipedia.org/wiki/Kezdőlap" target="blank">Cserjés paprika</a>
         </li>
         <li><a href="https://hu.wikipedia.org/wiki/Kezdőlap" target="blank">Kínai paprika</a>
